diesel_compile_tests/tests/fail/ordering_functions_require_ord.stderr
error[E0277]: the trait bound `diesel::sql_types::Bool: diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:13:38
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`, which is required by `diesel::sql_types::Bool: diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
   |
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
note: required by a bound in `diesel::dsl::max`
  --> $DIESEL/src/expression/functions/aggregate_ordering.rs
   |
   |     fn max<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                ^^^^^^^^^^^^^^^ required by this bound in `max`

error[E0277]: expressions of the type `diesel::sql_types::Bool` cannot be ordered by the database
  --> tests/fail/ordering_functions_require_ord.rs:13:31
   |
13 |     let source = stuff::table.select(max(stuff::b));
   |                               ^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`, which is required by `stuff::table: SelectDsl<_>`
   |
   = help: the following other types implement trait `SqlOrd`:
             diesel::sql_types::SmallInt
             diesel::sql_types::Integer
             BigInt
             diesel::sql_types::Float
             diesel::sql_types::Double
             diesel::sql_types::Text
             diesel::sql_types::Date
             Interval
           and $N others
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
   = note: required for `diesel::expression::functions::aggregate_ordering::max_utils::max<diesel::sql_types::Bool, columns::b>` to implement `diesel::Expression`
   = note: required for `stuff::table` to implement `SelectDsl<diesel::expression::functions::aggregate_ordering::max_utils::max<diesel::sql_types::Bool, columns::b>>`

error[E0277]: the trait bound `diesel::sql_types::Bool: diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate` is not satisfied
  --> tests/fail/ordering_functions_require_ord.rs:14:38
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                                      ^^^^^^^^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`, which is required by `diesel::sql_types::Bool: diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
   |
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
note: required by a bound in `diesel::dsl::min`
  --> $DIESEL/src/expression/functions/aggregate_ordering.rs
   |
   |     fn min<ST: SqlOrdAggregate>(expr: ST) -> ST::Ret;
   |                ^^^^^^^^^^^^^^^ required by this bound in `min`

error[E0277]: expressions of the type `diesel::sql_types::Bool` cannot be ordered by the database
  --> tests/fail/ordering_functions_require_ord.rs:14:31
   |
14 |     let source = stuff::table.select(min(stuff::b));
   |                               ^^^^^^ the trait `SqlOrd` is not implemented for `diesel::sql_types::Bool`, which is required by `stuff::table: SelectDsl<_>`
   |
   = help: the following other types implement trait `SqlOrd`:
             diesel::sql_types::SmallInt
             diesel::sql_types::Integer
             BigInt
             diesel::sql_types::Float
             diesel::sql_types::Double
             diesel::sql_types::Text
             diesel::sql_types::Date
             Interval
           and $N others
   = note: required for `diesel::sql_types::Bool` to implement `diesel::expression::functions::aggregate_ordering::private::SqlOrdAggregate`
   = note: required for `diesel::expression::functions::aggregate_ordering::min_utils::min<diesel::sql_types::Bool, columns::b>` to implement `diesel::Expression`
   = note: required for `stuff::table` to implement `SelectDsl<diesel::expression::functions::aggregate_ordering::min_utils::min<diesel::sql_types::Bool, columns::b>>`
